--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "order food",
   "scripts": {
     "test": "jest",
-    "start": "npx parcel index.html"
+    "start": "npx parcel src/index.html",
+    "build":"parcel build src/index.html"
   },
   "repository": {
     "type": "git",
